docs/vocabulary-fulltable/_sources/type/VideoObject/v1/index.rst.txt
:orphan:

VideoObject (v1)
================

.. warning::
   This is not the latest version. The latest version is :doc:`v5 <../v5/index>`.

**Previous Version:** none *(this is the oldest version)*

**URI:** `http://clams.ai/vocabulary/type/VideoObject/v1 <http://clams.ai/vocabulary/type/VideoObject/v1>`_

**Shortname:** ``VideoObject``

**Inherits from:** :doc:`Region (v1) <../../Region/v1/index>`

**Included in vocabulary versions:** :doc:`1.0.0 <../../../1.0.0/index>`, :doc:`1.0.1 <../../../1.0.1/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/VideoObject/v1 <http://mmif.clams.ai/vocabulary/VideoObject/v1>`_
- `http://mmif.clams.ai/0.4.0/vocabulary/VideoObject/ <http://mmif.clams.ai/0.4.0/vocabulary/VideoObject/>`_
- `http://mmif.clams.ai/0.4.1/vocabulary/VideoObject/ <http://mmif.clams.ai/0.4.1/vocabulary/VideoObject/>`_
- `http://mmif.clams.ai/0.4.2/vocabulary/VideoObject/ <http://mmif.clams.ai/0.4.2/vocabulary/VideoObject/>`_


Description
-----------

A sequence of Polygons, where each Polygon is associated with a TimePoint. So a VideoObject is in effect a sequence of image objects at certain time points.


Properties
----------

*Properties marked with* **\*** *are required.*


.. list-table::
   :header-rows: 1
   :widths: 15 10 75

   * - Property
     - Type
     - Description
   * - ``polygons`` **\***
     - array of string
     - The Polygons that make up the object.

*Inherited from* :doc:`Region (v1) <../../Region/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``timeUnit``
     - string
     - Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.

*Inherited from* :doc:`Annotation (v2) <../../Annotation/v2/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``document``
     - string
     - The identifier of the document that the annotation is over.

*Inherited from* :doc:`Thing (v1) <../../Thing/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``id`` **\***
     - string
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "polygons": {
         "description": "The Polygons that make up the object.",
         "items": {
           "type": "string"
         },
         "type": "array"
       }
     },
     "required": [
       "id",
       "polygons"
     ],
     "type": "object"
   }